	* lisp/sawfish/wm/user.jl
	* lisp/sawfish/wm/misc.jl
	* lisp/sawfish/wm/edge-flip.jl: squashed compiler warnings [Matthew Love]

	* lisp/sawfish/wm/ext/error-handler.jl: export `error-handler-function' [Matthew Love]

	* lisp/sawfish/wm/state/maximize.jl: squashed a compiler warning

	* lisp/sawfish/wm/integration/kde.jl: added logout, reboot and shutdown entries

2009-09-06  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/fdo-menu.jl: Partial rewrite of fdo-menu [Matthew Love]

	* lisp/sawfish/wm/user.jl
	* lisp/sawfish/wm/defaults.jl
	* lisp/sawfish/wm/extras.jl: sawfish.wm.extras removed
	                             moved try-require from extras to defaults
				     since gnome-int does no longer change the behaviour of sawfish itself
				     load defaults even if there's an rc file
				     generate the fdo-menu if there's no customized apps-menu

2009-09-05  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.spec.in: improved [Kim B. Heino]

	* lisp/sawfish/wm/ext/fdo-menu.jl: replace boundp check with variable-customized-p

2009-09-03  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/integration/kde.jl: initial kde integration module [incomplete atm]

	* man/sawfish.texi: fixed a typo

	* lisp/sawfish/wm.jl: removed deprecated command-line-arg for getting sm-id

	* po/POTFILES.in: updated

	* lisp/sawfish/wm/defaults.jl: try loading kde-int if kde is running

	* po/*.po: fixed-up

2009-09-02  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/user.jl
	* lisp/sawfish/wm/commands/help.jl: replace display-url by browser
	                                    improved browser command

	* lisp/sawfish/wm/gnome/integration.jl
	* lisp/sawfish/wm/integration/gnome.jl: renamed file
	                                        correctly change of browser-command
	                                        only change browser-command if not customized
						use browser instead of display-url
